name:                elm-test-server
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/karls/elm-test-server#readme
license:             BSD3
license-file:        LICENSE
author:              Karl Sutt
maintainer:          karl@sutt.ee
copyright:           Copyright (c) 2015 Karl Sutt
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable elm-test-server
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bubbles
  default-language:    Haskell2010
  ghc-options:         -threaded -fforce-recomp
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , socket-io
                     , wai
                     , wai-cors
                     , engine-io-wai
                     , stm
                     , warp
                     , mtl
                     , transformers
                     , aeson
                     , text
